--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activity.LoginActivity">
             <intent-filter>
@@ -62,22 +62,19 @@
         <activity android:name=".Activity.HighScoreMCActivity" />
         <activity android:name=".Activity.GameOverActivity" />
         <activity android:name=".Activity.ImageActivity" />
-        <activity android:name=".Activity.HighScoreYNActivity"></activity>
-
+        <activity android:name=".Activity.HighScoreYNActivity" />
 
         <provider
-            android:authorities="msu.olive.provider"
             android:name="android.support.v4.content.FileProvider"
+            android:authorities="msu.olive.provider"
             android:exported="false"
             android:grantUriPermissions="true">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths">
-            </meta-data>
+                android:resource="@xml/file_paths"></meta-data>
         </provider>
 
-
+        <activity android:name=".Activity.ViewUserPostActivity"></activity>
     </application>
 
 </manifest>
