change all hard-coded string to dynamic string for localization

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,10 +71,11 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".Activity.ViewUserPostActivity"></activity>
+        <activity android:name=".Activity.ViewUserPostActivity" />
+        <activity android:name=".Activity.UpdateProfileActivity"></activity>
     </application>
 
 </manifest>
