--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="msu.olive">
+    package="msu.roadsafety">
 
     <!-- permission -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -66,7 +66,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="msu.olive.provider"
+            android:authorities="msu.roadsafety.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
